--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ body {
 }
 .header { 
     padding-top: 50px;
+    padding-bottom: 94px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -18,6 +19,7 @@ body {
     align-items: center;
     justify-content: space-between; 
     flex-basis: auto;
+    gap: 51px;
  }
  .header-logo {
     display: block;
@@ -30,7 +32,6 @@ body {
     display: flex;
     list-style-type: none;
     gap: 54px;
-    padding-left: 92px;
 }
 .header-nav a {
     font-weight: 400;
@@ -61,7 +62,7 @@ body {
     position: relative;
 }
 .content {
-    padding-top: 212px;
+    padding-top: 196px;
 }
 .content-title {
     font-weight: 700;
@@ -83,11 +84,11 @@ body {
 }
 .number {
     margin-top: 6px;
-    padding-left: 9px;
+    margin-left: 9px;
 }
 .text {
     margin-top: 6px;
-    padding-left: 22px;
+    margin-left: 22px;
 }
 .content-text-2 {
     font-size: 18px;
@@ -96,12 +97,12 @@ body {
     width: 300px;
     margin-top: -20px;
     margin-bottom: 56px;
-    padding-left: 91px;
+    margin-left: 91px;
 }
 .arrow {
     background-repeat: no-repeat;
     display: block;
-    padding-top: 202px;
+    margin-top: 202px;
 }
 .content-link {
     font-weight: 700;
@@ -121,7 +122,7 @@ body {
 .visual {
     width: 100%;
     position: absolute;
-    top: 15px;
+    top: 0;
     right: -75px;
     display: flex;
     justify-content: flex-end;
